--- a/styles/globals.css
+++ b/styles/globals.css
@@ -704,6 +704,30 @@ img {
 .nav__item:hover:before {
 	transform: scaleY(1);
 }
+.nav__item:nth-of-type(1) {
+	/* delay for the first item */
+	animation-delay: 0.1s;
+}
+.nav__item:nth-of-type(2) {
+	/* delay for the second item */
+	animation-delay: 0.2s;
+}
+.nav__item:nth-of-type(3) {
+	/* delay for the third item */
+	animation-delay: 0.3s;
+}
+.nav__item:nth-of-type(4) {
+	/* delay for the third item */
+	animation-delay: 0.4s;
+}
+.nav__item:nth-of-type(5) {
+	/* delay for the third item */
+	animation-delay: 0.5s;
+}
+.nav__item:nth-of-type(6) {
+	/* delay for the third item */
+	animation-delay: 0.6s;
+}
 
 .burger-btn {
 	position: fixed;
