--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -5,6 +5,8 @@
 	content: "";
 	background-color: $pure-white;
 	transition: width 0.3s;
+	-webkit-box-shadow: 0px 0px 15px 4px rgba(0, 0, 0, 0.58);
+	box-shadow: 0px 0px 15px 4px rgba(0, 0, 0, 0.58);
 }
 
 @mixin heroImages($bgImg) {
