--- a/styles/style.css
+++ b/styles/style.css
@@ -760,6 +760,7 @@ img {
   content: "";
   background-color: #fff;
   transition: width 0.3s;
+  box-shadow: 0px 0px 15px 4px rgba(0, 0, 0, 0.58);
 }
 .burger-btn__bars {
   width: 100%;
