--- a/styles/style.css
+++ b/styles/style.css
@@ -638,6 +638,42 @@
   cursor: pointer;
 }
 
+.admin__panel {
+  display: flex;
+}
+.admin__panel nav {
+  min-width: 30vw;
+  display: flex;
+  flex-direction: column;
+}
+.admin__panel nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.admin__panel nav ul li {
+  margin: 0;
+  padding: 1rem;
+  border-bottom: 1px solid #ddd;
+}
+.admin__panel nav ul li:last-child {
+  border-bottom: none;
+}
+.admin__panel nav ul li ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-left: 1rem;
+}
+.admin__panel nav ul li ul li {
+  margin: 0;
+  padding: 1rem;
+  border-bottom: 1px solid #ddd;
+}
+.admin__panel nav ul li ul li:last-child {
+  border-bottom: none;
+}
+
 *,
 *::before,
 *::after {
