--- a/styles/style.css
+++ b/styles/style.css
@@ -638,15 +638,140 @@
   cursor: pointer;
 }
 
+.wrapper {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.white-block {
+  position: absolute;
+  height: 40px;
+  width: 60%;
+  background-color: rgb(245, 244, 244);
+}
+.white-block-left {
+  bottom: 0;
+  left: -50px;
+  transform: skew(45deg);
+}
+.white-block-right {
+  top: 0;
+  right: -50px;
+  transform: skew(45deg);
+}
+
+.contrast-box {
+  position: absolute;
+  right: 3rem;
+  top: 7.9rem;
+  background-image: url(../public/img/eye_contrast_icon.png);
+  background-position: top;
+  background-size: contain;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid #2e2e2e;
+}
+
+.btn-special-animation {
+  position: relative;
+  transition: background-color 0.3s;
+  overflow: hidden;
+  z-index: 0;
+}
+.btn-special-animation::before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.3s;
+  z-index: -1;
+}
+.btn-special-animation:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.section-heading {
+  position: relative;
+  margin-bottom: 2em;
+  font-size: 3rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-align: center;
+  color: #000000;
+  letter-spacing: 2px;
+}
+
+.section-padding {
+  padding: 3em 2em;
+}
+
+.btn-download {
+  color: #2e2e2e;
+  text-align: left;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s;
+  text-decoration: none;
+  font-size: 1rem;
+}
+.btn-download i {
+  margin-right: 5px;
+}
+.btn-download:hover {
+  scale: 1.06;
+}
+
+@media (min-width: 576px) {
+  .btn-download {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .section-heading {
+    font-size: 3.6rem;
+  }
+  .section-padding {
+    padding: 5em 2em;
+  }
+}
+@media (min-width: 992px) {
+  .section-heading {
+    font-size: 4.8rem;
+  }
+  .section-padding {
+    padding: 5em 2em;
+  }
+  .btn-download {
+    font-size: 2rem;
+  }
+}
 .admin__panel {
   display: flex;
 }
 .admin__panel nav {
+  padding: 4px 0;
   min-width: 30vw;
   display: flex;
   flex-direction: column;
 }
+.admin__panel nav li {
+  font-size: 2rem;
+  color: #fff;
+}
 .admin__panel nav ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -654,7 +779,7 @@
 .admin__panel nav ul li {
   margin: 0;
   padding: 1rem;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #fff;
 }
 .admin__panel nav ul li:last-child {
   border-bottom: none;
@@ -668,7 +793,7 @@
 .admin__panel nav ul li ul li {
   margin: 0;
   padding: 1rem;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #fff;
 }
 .admin__panel nav ul li ul li:last-child {
   border-bottom: none;
