--- a/styles/_admin.scss
+++ b/styles/_admin.scss
@@ -3,18 +3,29 @@
 @import "./mixins";
 
 .admin__panel {
+	.admin__nav {
+		width: 20vw;
+	}
+	@include bgGlass;
 	display: flex;
-	flex-direction: column;
-	gap: 5rem;
+	// flex-direction: column;
+	// gap: 5rem;
 	align-items: center;
 	nav {
+		// position: fixed;
+		height: 100vh;
+		@include bgGlass;
 		align-self: flex-start;
 		padding: 4px 0;
 		li {
 			font-size: 2rem;
 			color: $pure-white;
+			a {
+				text-decoration: none;
+				color: $pure-white;
+			}
 		}
-		min-width: 30vw;
+		width: 20vw;
 		display: flex;
 		flex-direction: column;
 		ul {
@@ -46,6 +57,88 @@
 					}
 				}
 			}
+		}
+	}
+}
+
+.actus__editor {
+	padding: 2em;
+	color: $pure-white;
+	@include bgGlass;
+	display: flex;
+	flex-direction: column;
+	gap: 1em;
+
+	button {
+		font-size: 1em;
+		border-radius: 12px;
+		padding: 1em 3em;
+
+		background-color: lightgreen;
+		transition: all 0.3s;
+
+		&:hover {
+			background-color: rgb(16, 204, 16);
+			color: $pure-white;
+		}
+	}
+}
+
+.orders__editor {
+	@include bgGlass;
+	color: $pure-white;
+	display: flex;
+
+	&__window {
+		width: 80vw;
+		padding: 2em;
+	}
+
+	form {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 0.5em;
+		button {
+			padding: 0.4em 2em;
+			margin-bottom: 1em;
+			background-color: lightgreen;
+			transition: all 0.3s;
+			border-radius: 12px;
+			&:hover {
+				background-color: greenyellow;
+			}
+		}
+
+		input,
+		textarea {
+			height: 2em;
+			width: 30vw;
+		}
+	}
+
+	&__table {
+		color: black;
+		z-index: 1;
+		width: 70vw;
+		padding: 0.4em;
+		background-color: #fff;
+		border-radius: 16px;
+		th {
+			text-align: center;
+			font-size: 1.8rem;
+			border-bottom: 1px solid $light-white;
+			font-weight: bold;
+		}
+		tr:nth-child(even) {
+			background-color: #f2f2f2;
+		}
+
+		button {
+			margin: 0.2em;
+			padding: 0.3em;
+			width: 100%;
 		}
 	}
 }
