--- a/styles/style.css
+++ b/styles/style.css
@@ -756,20 +756,36 @@
   }
 }
 .admin__panel {
+  background: rgba(0, 0, 0, 0.67);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.7px);
+  -webkit-backdrop-filter: blur(10.7px);
+  border: 1px solid rgba(0, 0, 0, 0.8);
   display: flex;
-  flex-direction: column;
-  gap: 5rem;
   align-items: center;
 }
+.admin__panel .admin__nav {
+  width: 20vw;
+}
 .admin__panel nav {
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.67);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.7px);
+  -webkit-backdrop-filter: blur(10.7px);
+  border: 1px solid rgba(0, 0, 0, 0.8);
   align-self: flex-start;
   padding: 4px 0;
-  min-width: 30vw;
+  width: 20vw;
   display: flex;
   flex-direction: column;
 }
 .admin__panel nav li {
   font-size: 2rem;
+  color: #fff;
+}
+.admin__panel nav li a {
+  text-decoration: none;
   color: #fff;
 }
 .admin__panel nav ul {
@@ -801,6 +817,249 @@
 }
 .admin__panel nav ul li ul li:last-child {
   border-bottom: none;
+}
+
+.actus__editor {
+  padding: 2em;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.67);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.7px);
+  -webkit-backdrop-filter: blur(10.7px);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+.actus__editor button {
+  font-size: 1em;
+  border-radius: 12px;
+  padding: 1em 3em;
+  background-color: lightgreen;
+  transition: all 0.3s;
+}
+.actus__editor button:hover {
+  background-color: rgb(16, 204, 16);
+  color: #fff;
+}
+
+.orders__editor {
+  background: rgba(0, 0, 0, 0.67);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.7px);
+  -webkit-backdrop-filter: blur(10.7px);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  color: #fff;
+  display: flex;
+}
+.orders__editor__window {
+  width: 80vw;
+  padding: 2em;
+}
+.orders__editor form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5em;
+}
+.orders__editor form button {
+  padding: 0.4em 2em;
+  margin-bottom: 1em;
+  background-color: lightgreen;
+  transition: all 0.3s;
+  border-radius: 12px;
+}
+.orders__editor form button:hover {
+  background-color: greenyellow;
+}
+.orders__editor form input,
+.orders__editor form textarea {
+  height: 2em;
+  width: 30vw;
+}
+.orders__editor__table {
+  color: black;
+  z-index: 1;
+  width: 70vw;
+  padding: 0.4em;
+  background-color: #fff;
+  border-radius: 16px;
+}
+.orders__editor__table th {
+  text-align: center;
+  font-size: 1.8rem;
+  border-bottom: 1px solid #000000;
+  font-weight: bold;
+}
+.orders__editor__table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+.orders__editor__table button {
+  margin: 0.2em;
+  padding: 0.3em;
+  width: 100%;
+}
+
+.wrapper {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.white-block {
+  position: absolute;
+  height: 40px;
+  width: 60%;
+  background-color: rgb(245, 244, 244);
+}
+.white-block-left {
+  bottom: 0;
+  left: -50px;
+  transform: skew(45deg);
+}
+.white-block-right {
+  top: 0;
+  right: -50px;
+  transform: skew(45deg);
+}
+
+.contrast-box {
+  position: absolute;
+  right: 3rem;
+  top: 7.9rem;
+  background-image: url(../public/img/eye_contrast_icon.png);
+  background-position: top;
+  background-size: contain;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid #2e2e2e;
+}
+
+.btn-special-animation {
+  position: relative;
+  transition: background-color 0.3s;
+  overflow: hidden;
+  z-index: 0;
+}
+.btn-special-animation::before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.3s;
+  z-index: -1;
+}
+.btn-special-animation:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.section-heading {
+  position: relative;
+  margin-bottom: 2em;
+  font-size: 3rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-align: center;
+  color: #000000;
+  letter-spacing: 2px;
+}
+
+.section-padding {
+  padding: 3em 2em;
+}
+
+.btn-download {
+  color: #2e2e2e;
+  text-align: left;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s;
+  text-decoration: none;
+  font-size: 1rem;
+}
+.btn-download i {
+  margin-right: 5px;
+}
+.btn-download:hover {
+  scale: 1.06;
+}
+
+@media (min-width: 576px) {
+  .btn-download {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .section-heading {
+    font-size: 3.6rem;
+  }
+  .section-padding {
+    padding: 5em 2em;
+  }
+}
+@media (min-width: 992px) {
+  .section-heading {
+    font-size: 4.8rem;
+  }
+  .section-padding {
+    padding: 5em 2em;
+  }
+  .btn-download {
+    font-size: 2rem;
+  }
+}
+.login__page {
+  background-image: url(../public/img/A-raised-bog-743322.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: #fff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login__page--form {
+  color: #fff;
+  padding: 6em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+  background: rgba(0, 0, 0, 0.67);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.7px);
+  -webkit-backdrop-filter: blur(10.7px);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  border-radius: 12px;
+}
+.login__page--form label {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.3em;
+}
+.login__page--form input {
+  height: 2.5em;
+}
+.login__page--form button {
+  padding: 1em 3em;
+  cursor: pointer;
+  border-radius: 12px;
+  transition: all 0.5s;
+}
+.login__page--form button:hover {
+  scale: 1.1;
 }
 
 *,
@@ -892,6 +1151,10 @@ img {
 .nav__item:nth-of-type(6) {
   /* delay for the third item */
   animation-delay: 0.6s;
+}
+.nav__item:nth-of-type(7) {
+  /* delay for the third item */
+  animation-delay: 0.7s;
 }
 
 .burger-btn {
