--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,6 +5,7 @@
 @import "./orders";
 @import "./cookie";
 @import "./admin";
+@import "./login";
 
 *,
 *::before,
@@ -98,6 +99,10 @@ img {
 		&:nth-of-type(6) {
 			/* delay for the third item */
 			animation-delay: 0.6s;
+		}
+		&:nth-of-type(7) {
+			/* delay for the third item */
+			animation-delay: 0.7s;
 		}
 	}
 }
